edit on the whole application and changing the auth fromcookie to local storage
