# server/app.js
@@ -19,14 +19,14 @@ const cors = require('cors');
 // Required to get the data from ==> .env
 require('dotenv').config();
 
-// app.use(cors({
-//     origin: 'http://localhost:4200',
-//     credentials: true
-// }));
 app.use(cors({
-    origin: 'https://master--c0nnectverse.netlify.app',
+    origin: 'http://localhost:4200',
     credentials: true
 }));
+// app.use(cors({
+//     origin: 'https://master--c0nnectverse.netlify.app',
+//     credentials: true
+// }));
 
 // Middlewares
 app.use(express.json());
