# server/routes/userFetchs.js
@@ -30,59 +30,66 @@ userRoutes.get('/api/userProviders/:id', async(req, res) => {
 });
 
 
-userRoutes.put('/api/user/addFriend', async(req, res) => {
+userRoutes.put('/api/user/friend', async(req, res) => {
     try {
         const { userId, friendUserId } = req.body;
 
-        const checkUser = await GoogleUser.findOne({googleId: userId}) || await DiscordUser.findById(userId) || await USER.findById(userId) || await GoogleUser.findById(userId);
+        // Find the user and the friend
+        const checkUser = await GoogleUser.findOne({ googleId: userId }) || await DiscordUser.findById(userId) || await USER.findById(userId) || await GoogleUser.findById(userId);
+        const checkFriend = await GoogleUser.findOne({ googleId: friendUserId }) || await DiscordUser.findById(friendUserId) || await USER.findById(friendUserId) || await GoogleUser.findById(friendUserId);
 
-        const checkFriend = await GoogleUser.findOne({googleId: friendUserId}) || await DiscordUser.findById(friendUserId) || await USER.findById(friendUserId) || await GoogleUser.findById(friendUserId);
+        if (!checkUser) return res.status(400).json({ success: false, message: "User Not Found" });
+        if (!checkFriend) return res.status(400).json({ success: false, message: "Friend Not Found" });
+        if (friendUserId === userId) return res.status(400).json({ success: false, message: "User cannot add/remove themselves" });
 
         const isFriendAlready = checkUser.friends.some(friend => friend.id === friendUserId);
 
-        if(friendUserId === userId) return res.status(400).json({ message: "this is the user" });
-        if (!checkFriend) return res.status(400).json({ message: "Friend Not Found" });
-        if (!checkUser) return res.status(400).json({ message: "User Not Found" });
-        if (isFriendAlready) return res.status(400).json({ message: "Friend is already added" });
+        if (isFriendAlready) {
+            // Remove the friend
+            checkUser.friends = checkUser.friends.filter(friend => friend.id !== friendUserId);
+            await checkUser.save();
 
-        const friend = {
-            id: friendUserId, 
-            displayName: checkFriend.displayName,
-            Image: checkFriend.photo
-        };
-    
-        checkUser.friends.push(friend);
-    
-        await checkUser.save();
-    
-        // Respond with the updated user
-        res.status(200).json(checkUser);
+            res.status(200).json(false);
+        } else {
+            // Add the friend
+            const friend = {
+                id: friendUserId,
+                displayName: checkFriend.displayName,
+                Image: checkFriend.photo
+            };
+            checkUser.friends.push(friend);
+            await checkUser.save();
+
+            res.status(200).json(true);
+        }
+
     } catch (error) {
-        res.status(500).json(error);
+        res.status(500).json({ success: false, error });
     }
-
 });
-
-userRoutes.put('/api/user/deleteFriend', async(req, res) => {
+userRoutes.put('/api/user/friendCheck', async(req, res) => {
     try {
         const { userId, friendUserId } = req.body;
 
-        const checkUser = await DiscordUser.findById(userId) || await USER.findById(userId) || await GoogleUser.findById(userId);
+        // Find the user and the friend
+        const checkUser = await GoogleUser.findOne({ googleId: userId }) || await DiscordUser.findById(userId) || await USER.findById(userId) || await GoogleUser.findById(userId);
+        const checkFriend = await GoogleUser.findOne({ googleId: friendUserId }) || await DiscordUser.findById(friendUserId) || await USER.findById(friendUserId) || await GoogleUser.findById(friendUserId);
 
-        if (!checkUser) {
-            return res.status(400).json({ message: "User Not Found" });
+        if (!checkUser) return res.status(400).json({ success: false, message: "User Not Found" });
+        if (!checkFriend) return res.status(400).json({ success: false, message: "Friend Not Found" });
+        if (friendUserId === userId) return res.status(400).json({ success: false, message: "User cannot add/remove themselves" });
+
+        const isFriendAlready = checkUser.friends.some(friend => friend.id === friendUserId);
+
+        if (isFriendAlready) {
+            res.status(200).json(false);
+        } else {
+            res.status(200).json(true);
         }
 
-        checkUser.friends = checkUser.friends.filter(friend => friend.id !== friendUserId);
-
-        await checkUser.save();
-
-        res.status(200).json(checkUser);
-
     } catch (error) {
-        res.status(500).json(error);
+        res.status(500).json({ success: false, error });
     }
-
 });
 
 userRoutes.get('/api/user/posts/:userId', async(req, res) => {
